fix: improve CORS security configuration
- Replace wildcard CORS origins with environment-specific configuration
- Add configurable CORS settings via application.properties
- Create production profile with strict CORS policy
- Add security checklist to documentation
- Use specific localhost origins for development
- Add support for CORS max-age and credentials configuration

Security improvements:
- No wildcard (*) origins in production
- Environment variables for CORS configuration
- Separate dev/test/prod profiles
- Documentation of security best practices

Addresses security concern with allowedOrigins wildcard